--- a/src/app/pages/fields/components/field-form/field-form.component.html
+++ b/src/app/pages/fields/components/field-form/field-form.component.html
@@ -31,181 +31,23 @@
                     </div>
                 </div>
             </div>
-            <div class="rel-position">
-                <div class="rel-position">
-                    <div>
-                        <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Search for Field options..." />
-                        </mat-form-field>
-                    </div>
-                    <div class="sel-container">
-                        <div class="sel-flex">
-                            <div class="sel-sub-container">
-                                <select *ngIf="fieldGroups?.length > 0" multiple="" class="sel-option">
-                                    <option *ngFor="let fieldGroup of fieldGroups" value="fieldGroup.uid"
-                                        style="padding: 0.25rem 0.5rem;">{{ fieldGroup?.name }}</option>
-                                </select>
-                            </div>
-                            <div class="assign-all">
-                                <button tabindex="0" type="button" class="sel-enabled">
-                                    <div>
-                                        <div class="assign-all-div">
-                                            <span class="assign-all-span">Assign all
-                                                {{
-                          (fieldGroups | searchByName: searchString)?.length
-                        }}
-                                                →</span>
-                                        </div>
-                                    </div>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="assign-unassign">
-                            <div class="assign-one">
-                                <button disabled="" tabindex="-1" type="button" class="assign-one-btn">
-                                    <div class="assign-one-div">
-                                        <span class="assign-one-span">→</span>
-                                    </div>
-                                </button>
-                            </div>
-                            <div class="unassign-one">
-                                <button disabled="" tabindex="-1" type="button" class="unassign-one-btn">
-                                    <div class="unassign-one-div">
-                                        <span class="unassign-one-span">←</span>
-                                    </div>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="sel-flex">
-                            <div class="sel-sub-container">
-                                <select multiple="" class="sel-option"> </select>
-                            </div>
-                            <div class="remove-all">
-                                <button disabled="" tabindex="-1" type="button" class="remove-all-btn">
-                                    <div class="remove-all-div">
-                                        <span class="remove-all-span">← Remove all </span>
-                                    </div>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both; height: 2rem; width: 100%;"></div>
-                </div>
+            <div class="mt-app-select">
+                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event)" [entityList]="fieldGroups">
+                </app-selection>
             </div>
-            <br />
-            <!-- Field Options -->
-            <div class="rel-position">
-                <div class="rel-position">
-                    <div>
-                        <mat-form-field class="example-full-width">
-                            <input matInput name="search" type="search" placeholder="Search for Field options..."
-                                [(ngModel)]="searchString" />
-                        </mat-form-field>
-                    </div>
-                    <div class="sel-container">
-                        <div class="sel-flex">
-                            <div class="sel-sub-container">
-                                <select *ngIf="fieldOptions?.length > 0" multiple="" class="sel-option">
-                                    <option *ngFor="
-                      let fieldOption of fieldOptions
-                        | searchByName: searchString
-                    " (click)="onSelect(fieldOption, $event, 'select')" value="fieldOption.uid"
-                                        style="padding: 0.25rem 0.5rem;">
-                                        {{ fieldOption?.name }}
-                                    </option>
-                                </select>
-                                <div *ngIf="
-                    (fieldOptions | searchByName: searchString)?.length === 0
-                  " class="error">
-                                    <i class="error-icon material-icons">warning</i>&nbsp; No
-                                    field option
-                                </div>
-                            </div>
-                            <div matRipple class="assign-all">
-                                <button [attr.class]="
-                    fieldOptions?.length > 0 ? 'sel-enabled' : 'sel-disabled'
-                  " [attr.disabled]="
-                    fieldOptions?.length === 0 ? 'disabled' : null
-                  " tabindex="0" type="button">
-                                    <div>
-                                        <div class="assign-all-div">
-                                            <span class="assign-all-span">Assign all
-                                                {{
-                          (fieldOptions | searchByName: searchString)?.length
-                        }}
-                                                →</span>
-                                        </div>
-                                    </div>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="assign-unassign">
-                            <div *ngIf="tempFieldOption?.length > 0"
-                                style="font-size: 13px; min-height: 15px; padding: 0px 8px;">
-                                {{ tempFieldOption?.length }} selected
-                            </div>
-                            <!-- ToDO: Select and Deselect Arrows -->
-                            <div class="assign-one">
-                                <button [attr.class]="
-                    tempFieldOption.length > 0 && action === 'select'
-                      ? 'is-enabled'
-                      : 'is-disabled'
-                  " tabindex="-1" type="button" class="assign-one-btn">
-                                    <div (click)="getSelectedFieldOption()" class="assign-one-div">
-                                        <span class="assign-one-span">→</span>
-                                    </div>
-                                </button>
-                            </div>
-                            <div class="unassign-one">
-                                <button [attr.class]="
-                    tempFieldOption.length > 0 && action === 'deselect'
-                      ? 'is-enabled'
-                      : 'is-disabled'
-                  " tabindex="-1" type="button" class="unassign-one-btn">
-                                    <div (click)="getDeSelectedFieldOption()" class="unassign-one-div">
-                                        <span class="unassign-one-span">←</span>
-                                    </div>
-                                </button>
-                            </div>
-                            <!-- ToDO: Select and Deselect Arrows -->
-                        </div>
-
-                        <!-- Field Option Remove All -->
-                        <div class="sel-flex">
-                            <div class="sel-sub-container">
-                                <select multiple="" *ngIf="selectedFieldOptions?.length > 0" class="sel-option">
-                                    <option *ngFor="
-                      let selectedFieldOption of selectedFieldOptions
-                        | searchByName: searchString
-                    " (click)="
-                      onDeselect(selectedFieldOption, $event, 'deselect')
-                    " value="fieldOption.uid" style="padding: 0.25rem 0.5rem;">
-                                        {{ selectedFieldOption?.name }}
-                                    </option>
-                                </select>
-                            </div>
-                            <div class="remove-all">
-                                <button [attr.class]="
-                    selectedFieldOptions?.length > 0
-                      ? 'sel-enabled'
-                      : 'sel-disabled'
-                  " disabled="selectedFieldOption?.length === 0" tabindex="-1" type="button">
-                                    <div class="remove-all-div">
-                                        <span
-                                            style="position: relative; opacity: 1; font-size: 14px; letter-spacing: 0px; text-transform: uppercase; font-weight: 500; margin: 0px; user-select: none; padding-left: 16px; padding-right: 16px; color: rgb(255, 255, 255);">←
-                                            Remove all
-                                            {{
-                        (selectedFieldOptions | searchByName: searchString)
-                          ?.length
-                      }}
-                                        </span>
-                                    </div>
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                    <div style="clear: both; height: 2rem; width: 100%;"></div>
+            <div class="mt-app-select">
+                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event)" [entityList]="fieldOptions">
+                </app-selection>
+            </div>
+            <div class="form-footer">
+                <div class="form-footer-div">
+                    <button mat-raised-button class="form-footer-save-btn" color="primary">
+                        Save
+                    </button>
                 </div>
+                <button mat-stroked-button class="form-footer-cancel-btn">
+                    Cancel
+                </button>
             </div>
         </div>
     </form>
