--- a/src/app/pages/fields/components/field-form/field-form.component.html
+++ b/src/app/pages/fields/components/field-form/field-form.component.html
@@ -1,12 +1,12 @@
 <div style="width: 100%; margin: 0px auto 2rem; padding: 2rem 5rem 4rem; position: relative;">
-    <form class="example-form">
+    <form [formGroup]="fieldRegistrationForm" class="example-form">
         <div>
             <div style="position: relative;">
                 <div style="position: relative;">
                     <div
                         style="font-size: 16px; line-height: 24px; width: 100%; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
                         <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Name" />
+                            <input formControlName="name" matInput placeholder="Name" />
                         </mat-form-field>
                     </div>
                 </div>
@@ -16,7 +16,7 @@
                     <div
                         style="font-size: 16px; line-height: 24px; width: 100%; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
                         <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Caption" />
+                            <input formControlName="shortName" matInput placeholder="Shortname" />
                         </mat-form-field>
                     </div>
                 </div>
@@ -26,17 +26,27 @@
                     <div
                         style="font-size: 16px; line-height: 24px; width: 100%; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
                         <mat-form-field class="example-full-width">
-                            <input matInput placeholder="Description" />
+                            <input formControlName="caption" matInput placeholder="Caption" />
+                        </mat-form-field>
+                    </div>
+                </div>
+            </div>
+            <div style="position: relative;">
+                <div style="position: relative;">
+                    <div
+                        style="font-size: 16px; line-height: 24px; width: 100%; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
+                        <mat-form-field class="example-full-width">
+                            <input formControlName="description" matInput placeholder="Description" />
                         </mat-form-field>
                     </div>
                 </div>
             </div>
             <div class="mt-app-select">
-                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event)" [entityList]="fieldGroups">
+                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event, 'fieldGroups')" [entityList]="fieldGroups">
                 </app-selection>
             </div>
             <div class="mt-app-select">
-                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event)" [entityList]="fieldOptions">
+                <app-selection (selectedEntityEventEmitter)="onSelectItemList($event, 'fieldOptions')" [entityList]="fieldOptions">
                 </app-selection>
             </div>
             <div class="form-footer">
