fix: 🐛 added support for all parameters in entities relation
This commit will add support for all parameters in entites relation
rather than only id being supplied

--- a/src/app/pages/fields/components/field-form/field-form.component.html
+++ b/src/app/pages/fields/components/field-form/field-form.component.html
@@ -51,7 +51,7 @@
             </div>
             <div class="form-footer">
                 <div class="form-footer-div">
-                    <button mat-raised-button class="form-footer-save-btn" color="primary">
+                    <button (click)="onSave()" mat-raised-button class="form-footer-save-btn" color="primary">
                         Save
                     </button>
                 </div>
