--- a/src/app/shared/containers/list-view/list-view.component.html
+++ b/src/app/shared/containers/list-view/list-view.component.html
@@ -64,7 +64,7 @@
                       <div style="margin-left: 0px; padding: 0px 24px 0px 64px; position: relative;">
                         <span class="material-icons" color="#757575"
                           style="color: rgb(117, 117, 117); position: absolute; font-size: 24px; display: block; user-select: none; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; height: 24px; width: 24px; top: 4px; margin: 0px; left: 24px;">edit</span>
-                        <div>Edit</div>
+                        <div (click)="editForm(element)" >Edit</div>
                       </div>
                     </div>
                   </span>
