feat: updated field form

--- a/src/app/shared/containers/content-area/content-area.component.html
+++ b/src/app/shared/containers/content-area/content-area.component.html
@@ -56,7 +56,7 @@
             <div class="maintenance-left-menu-list-container" style="width: 100% !important">
                 <div *ngIf="APIParams === 'fields'">
                     <app-field-form (saveEventEmitter)="onSave($event)" [formEditValues]="formEditValues"
-                        (fieldFormEventEmitter)="getEntityCreatingData($event)" [menuOption]="menuOption">
+                        (fieldFormEventEmitter)="getEntityCreatingData($event)" [menuOption]="menuOption" [APIParams]="APIParams">
                     </app-field-form>
                 </div>
                 <div *ngIf="APIParams !== 'fields'">
