--- a/src/app/pages/fields/components/field-form/field-form.component.html
+++ b/src/app/pages/fields/components/field-form/field-form.component.html
@@ -6,8 +6,16 @@
                     <div
                         style="font-size: 16px; line-height: 24px; width: 100%; height: 72px; display: inline-block; position: relative; background-color: transparent; font-family: Roboto, sans-serif; transition: height 200ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; cursor: auto;">
                         <mat-form-field class="example-full-width">
-                            <input formControlName="name" matInput placeholder="Name" />
+                            <input id="field-name" formControlName="name" (keyup)="checkNameAlreadyExist.next($event)"
+                                matInput placeholder="Name(*)" />
+                            <mat-error *ngIf="fieldRegistrationForm.get('name').hasError('notUnique')">
+                            </mat-error>
+                            <mat-hint *ngIf="fieldRegistrationForm.get('name').hasError('notUnique')">Name of the
+                                {{ APIParams }}
+                                <b class="">{{ fieldRegistrationForm.get("name").value }}</b>
+                                already exist</mat-hint>
                         </mat-form-field>
+                        <!-- <ngx-spinner></ngx-spinner> -->
                     </div>
                 </div>
             </div>
